src/components/_box.scss
// Comment
//
// @group Components
.box {
	// width: 100%;
	border: 2px solid transparent;
	overflow: visible;
	&:disabled,
	&[disabled]:not([disabled="false"]) {
		pointer-events: none;
		opacity: 0.3;
	}
	&:not(.--bttn):not(.--button) {
		&:not([class*="-p-"]):not([class*="-pT"]):not([class*="-pR"]):not([class*="-pB"]):not([class*="-pL"]):not([class*="-pY"]):not([class*="-pX"]) {
			padding: 1rem;
		}
	}
	&:not(.flx):not(.Inline) {
		@include flexbox(column, nowrap, flex-start, stretch);
		> :not([class*="-mB"]):not(:last-child) {
			// Bottom
			margin-bottom: 1rem;
		}
	}

	// size
	//
	// @group Modifiers
	&,
	&.--size {
		border-radius: 1rem;
	}
	&.--size-lg {
		border-radius: 1.667rem;
	}
	&.--size-md {
		border-radius: 1.333rem;
	}

	// Comment theme
	//
	// @group Modifiers
	&.--tm-light {
		&:not([class*="-bgCo"]) {
			background: color(light, 0.1);
		}
		&:hover {
			border-color: color(light, 0.1);
		}
		&:hover,
		&.is--active,
		&.is--routeExact {
			&.--bttn,
			&.--button {
				background: color(light, 0.2);
				// border-color: color(light, 0.3);
				.box {
					box-shadow: 3px 3px 9px color(light, 0.3);
				}
			}
		}
		&.--bttn,
		&.--button {
			&:not([class*="-txtCo"]) {
				// Color
				color: color(light);
			}
		}
	}
	&.--tm-lightAlt {
		&:not([class*="-bgCo"]) {
			background: color(light);
		}
		&:hover {
			border-color: color(dark, 0.1);
		}
		&:hover,
		&.is--active,
		&.is--routeExact {
			&.--bttn,
			&.--button {
				background: color(light, 0.2);
				// border-color: color(light, 0.3);
				.box {
					box-shadow: 3px 3px 9px color(light, 0.3);
				}
			}
		}
		&.--bttn,
		&.--button {
			&:not([class*="-txtCo"]) {
				// Color
				color: color(light);
			}
		}
	}

	&.--tm-primary {
		&:not([class*="-bgCo"]) {
			background: color(primary, 0.1);
		}
		&:hover {
			border-color: color(primary, 0.1);
		}
		&:hover,
		&.is--active,
		&.is--routeExact {
			&.--bttn,
			&.--button {
				background: color(primary, 0.2);
				// border-color: color(primary, 0.3);
				.box {
					box-shadow: 3px 3px 9px color(primary, 0.3);
				}
			}
		}
		&.--bttn,
		&.--button {
			&:not([class*="-txtCo"]) {
				// Color
				color: color(primary);
			}
		}
	}

	&.--tm-primaryAlt {
		&:not([class*="-bgCo"]) {
			background: color(primaryAlt, 0.1);
		}
		&:hover {
			border-color: color(primaryAlt, 0.1);
		}
		&:hover,
		&.is--active,
		&.is--routeExact {
			&.--bttn,
			&.--button {
				background: color(primaryAlt, 0.2);
				// border-color: color(primaryAlt, 0.3);
				.box {
					box-shadow: 3px 3px 9px color(primaryAlt, 0.3);
				}
			}
		}
		&.--bttn,
		&.--button {
			&:not([class*="-txtCo"]) {
				// Color
				color: color(primaryAlt);
			}
		}
	}

	&.--tm-danger {
		&:not([class*="-bgCo"]) {
			background: color(danger, 0.1);
		}
		&:hover {
			border-color: color(danger, 0.1);
		}
		&:hover,
		&.is--active,
		&.is--routeExact {
			&.--bttn,
			&.--button {
				background: color(danger, 0.2);
				// border-color: color(danger, 0.3);
				.box {
					box-shadow: 3px 3px 9px color(danger, 0.3);
				}
			}
		}
		&.--bttn,
		&.--button {
			&:not([class*="-txtCo"]) {
				// Color
				color: color(danger);
			}
		}
	}

	&.--tm-success {
		&:not([class*="-bgCo"]) {
			background: color(success, 0.1);
		}
		&:hover {
			border-color: color(success, 0.1);
		}
		&:hover,
		&.is--active,
		&.is--routeExact {
			&.--bttn,
			&.--button {
				background: color(success, 0.2);
				// border-color: color(success, 0.3);
				.box {
					box-shadow: 3px 3px 9px color(success, 0.3);
				}
			}
		}
		&.--bttn,
		&.--button {
			&:not([class*="-txtCo"]) {
				// Color
				color: color(success);
			}
		}
	}

	// default theme
	&:not([class*="-tm"]),
	&.--tm-secondary {
		&:not([class*="-bgCo"]) {
			background: color(secondary, 0.1);
		}
		&:hover {
			border-color: color(secondary, 0.1);
		}
		&:hover,
		&.is--active,
		&.is--routeExact {
			&.--bttn,
			&.--button {
				background: color(secondary, 0.2);
				// border-color: color(secondary, 0.3);
				.box {
					box-shadow: 3px 3px 9px color(secondary, 0.3);
				}
			}
		}
		&.--bttn,
		&.--button {
			&:not([class*="-txtCo"]) {
				// Color
				color: color(secondary);
			}
		}
	}

	// button behavior
	//
	// @group Modifiers
	&.--bttn,
	&.--button {
		padding: 0.8rem;
		.box {
			border-color: transparent !important;
		}
		p {
			text-align: center;
		}
	}

	.box {
		border-radius: 1rem;

		// Square shape
		// this assummes there is only one child
		//
		// @group Modifiers
		&.--square {
			&-xs {
				width: 3rem;
			}
			&-sm {
				width: 5rem;
			}
			&-lg {
				width: 9rem;
			}
			&,
			&-md {
				width: 6rem;
			}
		}
		&[class*="-square"] {
			margin: 0 auto;
			&:before {
				content: "";
				display: block;
				width: 100%;
				height: 0;
				padding-bottom: 100%;
			}
			> * {
				position: absolute;
				top: 50%;
				left: 50%;
				transform: translate(-50%, -50%);
			}
		}
	}
}

